src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> code
Rule 1     code -> code sent
Rule 2     code -> sent
Rule 3     code -> empty
Rule 4     sent -> statement
Rule 5     sent -> instruction SEMI
Rule 6     instruction -> assign
Rule 7     instruction -> function
Rule 8     statement -> function_definition
Rule 9     statement -> for_statement
Rule 10    statement -> if_statement
Rule 11    statement -> while_statement
Rule 12    for_statement -> FOR LPAREN for_valid_expr COMMA for_valid_expr COMMA for_valid_iter RPAREN LBRACE code RBRACE
Rule 13    for_statement -> FOR LPAREN ID IN ID RPAREN LBRACE code RBRACE
Rule 14    for_valid_expr -> expr_num
Rule 15    for_valid_expr -> expr_arithm
Rule 16    for_valid_iter -> PLUS
Rule 17    for_valid_iter -> PLUSPLUS
Rule 18    for_valid_iter -> MINUS
Rule 19    for_valid_iter -> MINUSMINUS
Rule 20    if_statement -> IF LPAREN logic_list RPAREN LBRACE code RBRACE
Rule 21    if_statement -> IF LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent
Rule 22    if_statement -> IF LPAREN logic_list RPAREN LBRACE code RBRACE ELSE LBRACE code RBRACE
Rule 23    if_statement -> IF LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent ELSE LBRACE code RBRACE
Rule 24    elif_sent -> ELIF LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent
Rule 25    elif_sent -> empty
Rule 26    while_statement -> WHILE LPAREN logic_list RPAREN LBRACE code RBRACE
Rule 27    function_definition -> DEF ID LPAREN RPAREN LBRACE code RBRACE
Rule 28    assign -> ID ASSIGN expr_type
Rule 29    assign -> ID ASSIGN expr_arithm
Rule 30    assign -> ID ASSIGN logic_list
Rule 31    assign -> ID ASSIGN expr_list
Rule 32    assign -> ID ASSIGN function
Rule 33    function -> ID LPAREN list RPAREN
Rule 34    list -> list COMMA ID
Rule 35    list -> list COMMA function
Rule 36    list -> function
Rule 37    list -> ID
Rule 38    list -> list COMMA expr_type
Rule 39    list -> expr_type
Rule 40    list -> empty
Rule 41    list -> list COMMA expr_arithm
Rule 42    list -> list COMMA logic_list
Rule 43    list -> expr_arithm
Rule 44    list -> logic_list
Rule 45    logic_list -> LPAREN logic_list RPAREN
Rule 46    logic_list -> logic_list AND logic_list
Rule 47    logic_list -> logic_list OR logic_list
Rule 48    logic_list -> expr_bool
Rule 49    expr_bool -> expr_bool EQ expr_bool
Rule 50    expr_bool -> expr_bool LT expr_bool
Rule 51    expr_bool -> expr_bool LET expr_bool
Rule 52    expr_bool -> expr_bool GT expr_bool
Rule 53    expr_bool -> expr_bool GET expr_bool
Rule 54    expr_bool -> expr_bool DIFF expr_bool
Rule 55    expr_bool -> NOT expr_bool
Rule 56    expr_bool -> function
Rule 57    expr_bool -> expr_type
Rule 58    expr_bool -> expr_arithm
Rule 59    expr_arithm -> LPAREN expr_arithm RPAREN
Rule 60    expr_arithm -> expr_arithm PLUS expr_arithm
Rule 61    expr_arithm -> expr_arithm MINUS expr_arithm
Rule 62    expr_arithm -> expr_arithm MULTIPLY expr_arithm
Rule 63    expr_arithm -> expr_arithm DIVIDE expr_arithm
Rule 64    expr_arithm -> MINUS expr_arithm
Rule 65    expr_arithm -> ID
Rule 66    expr_arithm -> function
Rule 67    expr_arithm -> expr_type
Rule 68    function -> sent_index_list
Rule 69    sent_index_list -> sent_index_list LBRACKET ID RBRACKET
Rule 70    sent_index_list -> ID LBRACKET ID RBRACKET
Rule 71    sent_index_list -> sent_index_list LBRACKET INTEGER RBRACKET
Rule 72    sent_index_list -> ID LBRACKET INTEGER RBRACKET
Rule 73    expr_list -> LBRACKET expr_inside_list RBRACKET
Rule 74    expr_inside_list -> expr_inside_list COMMA expr_type
Rule 75    expr_inside_list -> expr_inside_list COMMA expr_bool
Rule 76    expr_inside_list -> expr_type
Rule 77    expr_inside_list -> expr_bool
Rule 78    expr_inside_list -> empty
Rule 79    expr_type -> expr_num
Rule 80    expr_type -> expr_string
Rule 81    expr_bool -> TRUE
Rule 82    expr_bool -> FALSE
Rule 83    expr_num -> FLOAT
Rule 84    expr_num -> INTEGER
Rule 85    expr_string -> STRING
Rule 86    empty -> <empty>

Terminals, with rules where they appear

AND                  : 46
ASSIGN               : 28 29 30 31 32
COMMA                : 12 12 34 35 38 41 42 74 75
DEF                  : 27
DIFF                 : 54
DIVIDE               : 63
ELIF                 : 24
ELSE                 : 22 23
EQ                   : 49
FALSE                : 82
FLOAT                : 83
FOR                  : 12 13
GET                  : 53
GT                   : 52
ID                   : 13 13 27 28 29 30 31 32 33 34 37 65 69 70 70 72
IF                   : 20 21 22 23
IN                   : 13
INTEGER              : 71 72 84
LBRACE               : 12 13 20 21 22 22 23 23 24 26 27
LBRACKET             : 69 70 71 72 73
LET                  : 51
LPAREN               : 12 13 20 21 22 23 24 26 27 33 45 59
LT                   : 50
MINUS                : 18 61 64
MINUSMINUS           : 19
MULTIPLY             : 62
NOT                  : 55
OR                   : 47
PLUS                 : 16 60
PLUSPLUS             : 17
RBRACE               : 12 13 20 21 22 22 23 23 24 26 27
RBRACKET             : 69 70 71 72 73
RPAREN               : 12 13 20 21 22 23 24 26 27 33 45 59
SEMI                 : 5
STRING               : 85
TRUE                 : 81
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

assign               : 6
code                 : 1 12 13 20 21 22 22 23 23 24 26 27 0
elif_sent            : 21 23 24
empty                : 3 25 40 78
expr_arithm          : 15 29 41 43 58 59 60 60 61 61 62 62 63 63 64
expr_bool            : 48 49 49 50 50 51 51 52 52 53 53 54 54 55 75 77
expr_inside_list     : 73 74 75
expr_list            : 31
expr_num             : 14 79
expr_string          : 80
expr_type            : 28 38 39 57 67 74 76
for_statement        : 9
for_valid_expr       : 12 12
for_valid_iter       : 12
function             : 7 32 35 36 56 66
function_definition  : 8
if_statement         : 10
instruction          : 5
list                 : 33 34 35 38 41 42
logic_list           : 20 21 22 23 24 26 30 42 44 45 46 46 47 47
sent                 : 1 2
sent_index_list      : 68 69 71
statement            : 4
while_statement      : 11

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . code sent
    (2) code -> . sent
    (3) code -> . empty
    (4) sent -> . statement
    (5) sent -> . instruction SEMI
    (86) empty -> .
    (8) statement -> . function_definition
    (9) statement -> . for_statement
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (6) instruction -> . assign
    (7) instruction -> . function
    (27) function_definition -> . DEF ID LPAREN RPAREN LBRACE code RBRACE
    (12) for_statement -> . FOR LPAREN for_valid_expr COMMA for_valid_expr COMMA for_valid_iter RPAREN LBRACE code RBRACE
    (13) for_statement -> . FOR LPAREN ID IN ID RPAREN LBRACE code RBRACE
    (20) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE
    (21) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent
    (22) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE ELSE LBRACE code RBRACE
    (23) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent ELSE LBRACE code RBRACE
    (26) while_statement -> . WHILE LPAREN logic_list RPAREN LBRACE code RBRACE
    (28) assign -> . ID ASSIGN expr_type
    (29) assign -> . ID ASSIGN expr_arithm
    (30) assign -> . ID ASSIGN logic_list
    (31) assign -> . ID ASSIGN expr_list
    (32) assign -> . ID ASSIGN function
    (33) function -> . ID LPAREN list RPAREN
    (68) function -> . sent_index_list
    (69) sent_index_list -> . sent_index_list LBRACKET ID RBRACKET
    (70) sent_index_list -> . ID LBRACKET ID RBRACKET
    (71) sent_index_list -> . sent_index_list LBRACKET INTEGER RBRACKET
    (72) sent_index_list -> . ID LBRACKET INTEGER RBRACKET

  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    $end            reduce using rule 86 (empty -> .)
    DEF             shift and go to state 12
    FOR             shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 13

  ! DEF             [ reduce using rule 86 (empty -> .) ]
  ! FOR             [ reduce using rule 86 (empty -> .) ]
  ! IF              [ reduce using rule 86 (empty -> .) ]
  ! WHILE           [ reduce using rule 86 (empty -> .) ]
  ! ID              [ reduce using rule 86 (empty -> .) ]

    code                           shift and go to state 1
    sent                           shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    instruction                    shift and go to state 5
    function_definition            shift and go to state 6
    for_statement                  shift and go to state 7
    if_statement                   shift and go to state 8
    while_statement                shift and go to state 9
    assign                         shift and go to state 10
    function                       shift and go to state 11
    sent_index_list                shift and go to state 17

state 1

    (0) S' -> code .
    (1) code -> code . sent
    (4) sent -> . statement
    (5) sent -> . instruction SEMI
    (8) statement -> . function_definition
    (9) statement -> . for_statement
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (6) instruction -> . assign
    (7) instruction -> . function
    (27) function_definition -> . DEF ID LPAREN RPAREN LBRACE code RBRACE
    (12) for_statement -> . FOR LPAREN for_valid_expr COMMA for_valid_expr COMMA for_valid_iter RPAREN LBRACE code RBRACE
    (13) for_statement -> . FOR LPAREN ID IN ID RPAREN LBRACE code RBRACE
    (20) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE
    (21) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent
    (22) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE ELSE LBRACE code RBRACE
    (23) if_statement -> . IF LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent ELSE LBRACE code RBRACE
    (26) while_statement -> . WHILE LPAREN logic_list RPAREN LBRACE code RBRACE
    (28) assign -> . ID ASSIGN expr_type
    (29) assign -> . ID ASSIGN expr_arithm
    (30) assign -> . ID ASSIGN logic_list
    (31) assign -> . ID ASSIGN expr_list
    (32) assign -> . ID ASSIGN function
    (33) function -> . ID LPAREN list RPAREN
    (68) function -> . sent_index_list
    (69) sent_index_list -> . sent_index_list LBRACKET ID RBRACKET
    (70) sent_index_list -> . ID LBRACKET ID RBRACKET
    (71) sent_index_list -> . sent_index_list LBRACKET INTEGER RBRACKET
    (72) sent_index_list -> . ID LBRACKET INTEGER RBRACKET

    DEF             shift and go to state 12
    FOR             shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    ID              shift and go to state 13

    sent                           shift and go to state 18
    statement                      shift and go to state 4
    instruction                    shift and go to state 5
    function_definition            shift and go to state 6
    for_statement                  shift and go to state 7
    if_statement                   shift and go to state 8
    while_statement                shift and go to state 9
    assign                         shift and go to state 10
    function                       shift and go to state 11
    sent_index_list                shift and go to state 17

state 2

    (2) code -> sent .

    DEF             reduce using rule 2 (code -> sent .)
    FOR             reduce using rule 2 (code -> sent .)
    IF              reduce using rule 2 (code -> sent .)
    WHILE           reduce using rule 2 (code -> sent .)
    ID              reduce using rule 2 (code -> sent .)
    $end            reduce using rule 2 (code -> sent .)
    RBRACE          reduce using rule 2 (code -> sent .)


state 3

    (3) code -> empty .

    DEF             reduce using rule 3 (code -> empty .)
    FOR             reduce using rule 3 (code -> empty .)
    IF              reduce using rule 3 (code -> empty .)
    WHILE           reduce using rule 3 (code -> empty .)
    ID              reduce using rule 3 (code -> empty .)
    $end            reduce using rule 3 (code -> empty .)
    RBRACE          reduce using rule 3 (code -> empty .)


state 4

    (4) sent -> statement .

    DEF             reduce using rule 4 (sent -> statement .)
    FOR             reduce using rule 4 (sent -> statement .)
    IF              reduce using rule 4 (sent -> statement .)
    WHILE           reduce using rule 4 (sent -> statement .)
    ID              reduce using rule 4 (sent -> statement .)
    $end            reduce using rule 4 (sent -> statement .)
    RBRACE          reduce using rule 4 (sent -> statement .)


state 5

    (5) sent -> instruction . SEMI

    SEMI            shift and go to state 19


state 6

    (8) statement -> function_definition .

    DEF             reduce using rule 8 (statement -> function_definition .)
    FOR             reduce using rule 8 (statement -> function_definition .)
    IF              reduce using rule 8 (statement -> function_definition .)
    WHILE           reduce using rule 8 (statement -> function_definition .)
    ID              reduce using rule 8 (statement -> function_definition .)
    $end            reduce using rule 8 (statement -> function_definition .)
    RBRACE          reduce using rule 8 (statement -> function_definition .)


state 7

    (9) statement -> for_statement .

    DEF             reduce using rule 9 (statement -> for_statement .)
    FOR             reduce using rule 9 (statement -> for_statement .)
    IF              reduce using rule 9 (statement -> for_statement .)
    WHILE           reduce using rule 9 (statement -> for_statement .)
    ID              reduce using rule 9 (statement -> for_statement .)
    $end            reduce using rule 9 (statement -> for_statement .)
    RBRACE          reduce using rule 9 (statement -> for_statement .)


state 8

    (10) statement -> if_statement .

    DEF             reduce using rule 10 (statement -> if_statement .)
    FOR             reduce using rule 10 (statement -> if_statement .)
    IF              reduce using rule 10 (statement -> if_statement .)
    WHILE           reduce using rule 10 (statement -> if_statement .)
    ID              reduce using rule 10 (statement -> if_statement .)
    $end            reduce using rule 10 (statement -> if_statement .)
    RBRACE          reduce using rule 10 (statement -> if_statement .)


state 9

    (11) statement -> while_statement .

    DEF             reduce using rule 11 (statement -> while_statement .)
    FOR             reduce using rule 11 (statement -> while_statement .)
    IF              reduce using rule 11 (statement -> while_statement .)
    WHILE           reduce using rule 11 (statement -> while_statement .)
    ID              reduce using rule 11 (statement -> while_statement .)
    $end            reduce using rule 11 (statement -> while_statement .)
    RBRACE          reduce using rule 11 (statement -> while_statement .)


state 10

    (6) instruction -> assign .

    SEMI            reduce using rule 6 (instruction -> assign .)


state 11

    (7) instruction -> function .

    SEMI            reduce using rule 7 (instruction -> function .)


state 12

    (27) function_definition -> DEF . ID LPAREN RPAREN LBRACE code RBRACE

    ID              shift and go to state 20


state 13

    (28) assign -> ID . ASSIGN expr_type
    (29) assign -> ID . ASSIGN expr_arithm
    (30) assign -> ID . ASSIGN logic_list
    (31) assign -> ID . ASSIGN expr_list
    (32) assign -> ID . ASSIGN function
    (33) function -> ID . LPAREN list RPAREN
    (70) sent_index_list -> ID . LBRACKET ID RBRACKET
    (72) sent_index_list -> ID . LBRACKET INTEGER RBRACKET

    ASSIGN          shift and go to state 21
    LPAREN          shift and go to state 22
    LBRACKET        shift and go to state 23


state 14

    (12) for_statement -> FOR . LPAREN for_valid_expr COMMA for_valid_expr COMMA for_valid_iter RPAREN LBRACE code RBRACE
    (13) for_statement -> FOR . LPAREN ID IN ID RPAREN LBRACE code RBRACE

    LPAREN          shift and go to state 24


state 15

    (20) if_statement -> IF . LPAREN logic_list RPAREN LBRACE code RBRACE
    (21) if_statement -> IF . LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent
    (22) if_statement -> IF . LPAREN logic_list RPAREN LBRACE code RBRACE ELSE LBRACE code RBRACE
    (23) if_statement -> IF . LPAREN logic_list RPAREN LBRACE code RBRACE elif_sent ELSE LBRACE code RBRACE

    LPAREN          shift and go to state 25


state 16

    (26) while_statement -> WHILE . LPAREN logic_list RPAREN LBRACE code RBRACE

    LPAREN          shift and go to state 26


state 17

    (68) function -> sent_index_list .
    (69) sent_index_list -> sent_index_list . LBRACKET ID RBRACKET
    (71) sent_index_list -> sent_index_list . LBRACKET INTEGER RBRACKET

    SEMI            reduce using rule 68 (function -> sent_index_list .)
    PLUS            reduce using rule 68 (function -> sent_index_list .)
    MINUS           reduce using rule 68 (function -> sent_index_list .)
    MULTIPLY        reduce using rule 68 (function -> sent_index_list .)
    DIVIDE          reduce using rule 68 (function -> sent_index_list .)
    EQ              reduce using rule 68 (function -> sent_index_list .)
    LT              reduce using rule 68 (function -> sent_index_list .)
    LET             reduce using rule 68 (function -> sent_index_list .)
    GT              reduce using rule 68 (function -> sent_index_list .)
    GET             reduce using rule 68 (function -> sent_index_list .)
    DIFF            reduce using rule 68 (function -> sent_index_list .)
    AND             reduce using rule 68 (function -> sent_index_list .)
    OR              reduce using rule 68 (function -> sent_index_list .)
    RPAREN          reduce using rule 68 (function -> sent_index_list .)
    COMMA           reduce using rule 68 (function -> sent_index_list .)
    RBRACKET        reduce using rule 68 (function -> sent_index_list .)
    LBRACKET        shift and go to state 27


state 18

    (1) code -> code sent .

    DEF             reduce using rule 1 (code -> code sent .)
    FOR             reduce using rule 1 (code -> code sent .)
    IF              reduce using rule 1 (code -> code sent .)
    WHILE           reduce using rule 1 (code -> code sent .)
    ID              reduce using rule 1 (code -> code sent .)
    $end            reduce using rule 1 (code -> code sent .)
    RBRACE          reduce using rule 1 (code -> code sent .)


state 19

    (5) sent -> instruction SEMI .

    DEF             reduce using rule 5 (sent -> instruction SEMI .)
    FOR             reduce using rule 5 (sent -> instruction SEMI .)
    IF              reduce using rule 5 (sent -> instruction SEMI .)
    WHILE           reduce using rule 5 (sent -> instruction SEMI .)
    ID              reduce using rule 5 (sent -> instruction SEMI .)
    $end            reduce using rule 5 (sent -> instruction SEMI .)
    RBRACE          reduce using rule 5 (sent -> instruction SEMI .)


state 20

    (27) function_definition -> DEF ID . LPAREN RPAREN LBRACE code RBRACE

    LPAREN          shift and go to state 28


state 21
